feat: auto-refresh and content topic analysis
Add auto refresh mode to rescrape only when new posts appear, upsert metrics into SQLite, simplify targets via targets.txt and env/period flags, and include topics analysis + CSV/HTML in published docs.

--- a/workflow_template_scrape_and_publish.yml
+++ b/workflow_template_scrape_and_publish.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           APIFY_TOKEN: ${{ secrets.APIFY_TOKEN }}
         run: |
-          python ig_apify_scrape.py --limit "${{ inputs.limit || '300' }}" --publish-dir docs --update
+          python ig_apify_scrape.py --limit "${{ inputs.limit || '2000' }}" --publish-dir docs --refresh always
 
       - name: Commit updated docs
         run: |
