--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 OUTPUT_DIR=output
 DB_PATH=cache/instagram_apify.sqlite
-TARGETS_FILE=targets.csv
+TARGETS_FILE=targets.txt
 APIFY_BASE_URL=https://api.apify.com
+
+# Период (упрощение): можно задать либо START_DATE/END_DATE, либо PERIOD
+# START_DATE=2025-01-01
+# END_DATE=2026-02-01   # end-exclusive; если не задано — берётся tomorrow (UTC)
+# PERIOD=this-month      # this-month | last-month | last-30d
 
 # Apify token (держите в `.env`, НЕ в `.env.example`)
 APIFY_TOKEN=apify_api_...
