--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ OUTPUT_DIR=output
 DB_PATH=cache/instagram_apify.sqlite
 TARGETS_FILE=targets.txt
 APIFY_BASE_URL=https://api.apify.com
+TAXONOMY_FILE=taxonomy.json
 
 # Период (упрощение): можно задать либо START_DATE/END_DATE, либо PERIOD
 # START_DATE=2025-01-01
