feat: add LLM-only analysis via free local Ollama
Add --analysis llm/both modes, generate llm_insights JSON via Ollama API, and embed LLM themes/recommendations in the HTML report.

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ TARGETS_FILE=targets.txt
 APIFY_BASE_URL=https://api.apify.com
 TAXONOMY_FILE=taxonomy.json
 
+# ===== LLM (бесплатно, локально через Ollama) =====
+# Установи Ollama и запусти: `ollama serve`
+# Скачай модель: `ollama pull llama3.2:3b`
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2:3b
+
 # Период (упрощение): можно задать либо START_DATE/END_DATE, либо PERIOD
 # START_DATE=2025-01-01
 # END_DATE=2026-02-01   # end-exclusive; если не задано — берётся tomorrow (UTC)
