feat: add Vectara integration and Kravira theme benchmark
Adds optional Vectara indexing and theme-level semantic benchmarking to compare competitors vs Kravira, plus updated reports and exports.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,13 @@ APIFY_BASE_URL=https://api.apify.com
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.2:3b
 
+# LLM настройки (опционально)
+# BASELINE_PROFILE=kravira.by   # с кем сравниваем всех (по умолчанию: kravira)
+# LLM_CHUNK_SIZE=60            # постов в одном LLM запросе
+# LLM_MAX_POSTS_PER_PROFILE=0  # 0 = все
+# OLLAMA_TIMEOUT_SECONDS=240
+# LLM_POLISH=0                 # 1 = доп. "редакторский" проход (медленнее)
+
 # Период (упрощение): можно задать либо START_DATE/END_DATE, либо PERIOD
 # START_DATE=2025-01-01
 # END_DATE=2026-02-01   # end-exclusive; если не задано — берётся tomorrow (UTC)
@@ -16,3 +23,9 @@ OLLAMA_MODEL=llama3.2:3b
 
 # Apify token (держите в `.env`, НЕ в `.env.example`)
 APIFY_TOKEN=apify_api_...
+
+# ===== Vectara (семантический поиск по постам; ключ хранить ТОЛЬКО в `.env`) =====
+# VECTARA_BASE_URL=https://api.vectara.io
+# VECTARA_CUSTOMER_ID=3183420327
+# VECTARA_CORPUS_KEY=crp_11
+# VECTARA_API_KEY=zwt_...   # персональный ключ (НЕ коммитить)
