docs: publish Jan 2026 report and Vectara themes
Adds the 2026-01-01..2026-02-01 report artifacts (including Vectara theme benchmark) and updates the docs index.

--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,5 @@ APIFY_TOKEN=apify_api_...
 # ===== Vectara (семантический поиск по постам; ключ хранить ТОЛЬКО в `.env`) =====
 # VECTARA_BASE_URL=https://api.vectara.io
 # VECTARA_CUSTOMER_ID=3183420327
-# VECTARA_CORPUS_KEY=crp_11
+# VECTARA_CORPUS_KEY=kravira_inst    # это именно corpus_key (см. List corpora API: GET /v2/corpora)
 # VECTARA_API_KEY=zwt_...   # персональный ключ (НЕ коммитить)
