refactor: switch LLM to OpenAI API and drop Vectara

--- a/workflow_template_scrape_and_publish.yml
+++ b/workflow_template_scrape_and_publish.yml
@@ -32,10 +32,14 @@ jobs:
       - name: Run scraper and publish to docs/
         env:
           APIFY_TOKEN: ${{ secrets.APIFY_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          # GitHub runners don't have Ollama by default, so we publish without LLM analysis here.
-          # For LLM mode run locally: `ollama serve` + `python ig_apify_scrape.py --analysis llm --publish-dir docs`
-          python ig_apify_scrape.py --limit "${{ inputs.limit || '2000' }}" --publish-dir docs --refresh always --analysis none
+          # If OPENAI_API_KEY is set, include LLM analysis; otherwise publish without LLM.
+          if [[ -n "${OPENAI_API_KEY}" ]]; then
+            python ig_apify_scrape.py --limit "${{ inputs.limit || '2000' }}" --publish-dir docs --refresh always --analysis llm
+          else
+            python ig_apify_scrape.py --limit "${{ inputs.limit || '2000' }}" --publish-dir docs --refresh always --analysis none
+          fi
 
       - name: Commit updated docs
         run: |
