fix: nav to index, human labels (ЛОДЭ etc), full targets, index howto

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 OUTPUT_DIR=output
 DB_PATH=cache/instagram_apify.sqlite
-TARGETS_FILE=targets.txt
+TARGETS_FILE=targets.csv
 APIFY_BASE_URL=https://api.apify.com
 
 # ===== LLM (OpenAI‑совместимый API) =====
